--- a/index.html
+++ b/index.html
@@ -100,27 +100,35 @@
             <h3 class="barHead">HTMl</h3>
             <span class="barPercent">89%</span>
             <div class="basebar"></div>
-            <div date-aos="fade-right" date-aos-offset="300"  date-aos-easing="ease-in-sine" class="basebar htmlbar"></div>
+            <div data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine" class="basebar htmlbar"></div>
           </div>
           <div class="bars">
             <h3 class="barHead">CSS</h3>
             <span class="barPercent">85%</span>
             <div class="basebar"></div>
-            <div date-aos="fade-right" date-aos-offset="300"  date-aos-easing="ease-in-sine" class="basebar cssbar"></div>
+            <div data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine"  class="basebar cssbar"></div>
           </div>
           <div class="bars">
             <h3 class="barHead">Java Script</h3>
             <span class="barPercent">69%</span>
             <div class="basebar"></div>
-            <div date-aos="fade-right" date-aos-offset="300"  date-aos-easing="ease-in-sine" class="basebar jsbar"></div>
+            <div data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine" class="basebar jsbar"></div>
           </div>
           <div class="bars">
             <h3 class="barHead">React</h3>
             <span class="barPercent">78%</span>
             <div class="basebar"></div>
-            <div date-aos="fade-right" date-aos-offset="300"  date-aos-easing="ease-in-sine" class="basebar reactbar"></div>
-          </div>    
+            <div data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine" class="basebar reactbar"></div>    
         </div>
+      </div> 
         <div data-aos="fade-left" class="skillimage">
           <img class="skillImage" src="https://cdn.prod.website-files.com/6516813912555e8b460c1f1e/66ccc0e25ac407eaf8aa5a7d_6569b70988af49e1a359574e_Benefits%2520of%2520Skills%2520Assessment%2520Test.webp" alt="no image">
         </div>
